(#) Several small layout issues in back-end fixed/2

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -862,10 +862,9 @@ input[type='radio'] {
 	.icon-cloud-download {
 		color: #0480BE;
 	}
-	.SpRemoveRepo,
 	.SpExtInstall {
 		//	float: left;
-		padding: 2px 12px;
+		padding: 1px 12px;
 		min-width: 120px;
 	}
 	.SpCloudInstall {
@@ -875,10 +874,12 @@ input[type='radio'] {
 			width: 146px;
 		}
 	}
+	.modal-body div,
 	.SPPbarMessage {
 		padding: 10px;
 	}
-	.SPPbarMessage a{
+	.modal-body div a,
+	.SPPbarMessage a {
 		font-weight: bold;
 		color: #333;
 		text-decoration: underline;
@@ -887,6 +888,10 @@ input[type='radio'] {
 		margin-left: 10px;
 		min-width: 80px;
 	}
+}
+.SobiPro .SpRemoveRepo {
+	//	float: left;
+	padding: 1px 12px;
 }
 
 .SobiPro .SpCertificate .form-horizontal .control-group {
